// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderButton matches last Close icon snapshot 1`] = `
<ForwardRef
  disabled={false}
  hitSlop={
    Object {
      "bottom": 7,
      "left": 7,
      "right": 7,
      "top": 7,
    }
  }
  onPress={[Function]}
>
  <Icon
    name="Ex"
  />
</ForwardRef>
`;

exports[`HeaderButton matches last snapshot 1`] = `
<ForwardRef
  disabled={false}
  hitSlop={
    Object {
      "bottom": 7,
      "left": 7,
      "right": 7,
      "top": 7,
    }
  }
  onPress={[Function]}
>
  <Text>
    Press Me!
  </Text>
</ForwardRef>
`;
